{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 802,
  "lineage": "beb08c28-8c61-7a06-e8f3-7a2c749acd23",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:047976664704:loadbalancer/app/ep-backend-prod-alb/39d88c7646a22ce6",
            "arn_suffix": "app/ep-backend-prod-alb/39d88c7646a22ce6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ep-backend-prod-alb-574551345.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:047976664704:loadbalancer/app/ep-backend-prod-alb/39d88c7646a22ce6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ep-backend-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00df363c91e5ff8e2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017fa88ed68cd8034"
              },
              {
                "subnet_id": "subnet-06d92f7ffc1c455bd"
              }
            ],
            "subnets": [
              "subnet-017fa88ed68cd8034",
              "subnet-06d92f7ffc1c455bd"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-alb"
            },
            "vpc_id": "vpc-00a6b2300febc068d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:047976664704:listener/app/ep-backend-prod-alb/39d88c7646a22ce6/0a00707a59fcf873",
            "certificate_arn": "arn:aws:acm:ap-south-1:047976664704:certificate/6d29b63a-0340-4c30-a21b-0c82b8f8d68b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:047976664704:targetgroup/ep-backend-prod-alb-tg/6a0f0573b4103799",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:047976664704:listener/app/ep-backend-prod-alb/39d88c7646a22ce6/0a00707a59fcf873",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:047976664704:loadbalancer/app/ep-backend-prod-alb/39d88c7646a22ce6",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-alb-https"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-alb-https"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.app",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.ep-backend",
            "data.aws_acm_certificate.issued",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:047976664704:targetgroup/ep-backend-prod-alb-tg/6a0f0573b4103799",
            "arn_suffix": "targetgroup/ep-backend-prod-alb-tg/6a0f0573b4103799",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:047976664704:targetgroup/ep-backend-prod-alb-tg/6a0f0573b4103799",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ep-backend-prod-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-alb-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-alb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "dependencies": [
            "aws_vpc.ep-backend"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0997f4eade3f1acca",
            "domain": "vpc",
            "id": "eipalloc-0997f4eade3f1acca",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-196-153.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.196.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-gw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-gw"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.ep-backend"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b8cfbe744ea1c60",
            "domain": "vpc",
            "id": "eipalloc-09b8cfbe744ea1c60",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-52-66-19-115.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.19.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-gw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-gw"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.ep-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "redis_server_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eff8da40737eeeda",
            "association_id": "eipassoc-06985a85613c5aec0",
            "domain": "vpc",
            "id": "eipalloc-0eff8da40737eeeda",
            "instance": "i-01d06055b63c7606b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-05008250f259c5551",
            "private_dns": "ip-172-17-2-60.ap-south-1.compute.internal",
            "private_ip": "172.17.2.60",
            "public_dns": "ec2-3-110-247-13.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.247.13",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.redis_server",
            "aws_key_pair.access_key",
            "aws_security_group.ecomm_pulse_redis_server",
            "aws_subnet.public",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0287a05f0ef0e9d9a",
            "arn": "arn:aws:ec2:ap-south-1:047976664704:instance/i-01d06055b63c7606b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d06055b63c7606b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "Developer-Access-Prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05008250f259c5551",
            "private_dns": "ip-172-17-2-60.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.2.60",
            "public_dns": "ec2-15-206-68-115.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.68.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08db5029a1280b638",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017fa88ed68cd8034",
            "tags": {
              "Name": "ep-backend-prod-redis-server"
            },
            "tags_all": {
              "Name": "ep-backend-prod-redis-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-046e9b70cce7e742a"
            ]
          },
          "dependencies": [
            "aws_key_pair.access_key",
            "aws_security_group.ecomm_pulse_redis_server",
            "aws_subnet.public",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:internet-gateway/igw-02b10fe681ffd6f16",
            "id": "igw-02b10fe681ffd6f16",
            "owner_id": "047976664704",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-igw"
            },
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "dependencies": [
            "aws_vpc.ep-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:047976664704:listener/app/ep-backend-prod-alb/39d88c7646a22ce6/d1d22c0502fae0b6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:047976664704:listener/app/ep-backend-prod-alb/39d88c7646a22ce6/d1d22c0502fae0b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:047976664704:loadbalancer/app/ep-backend-prod-alb/39d88c7646a22ce6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-alb-http"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-alb-http"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0997f4eade3f1acca",
            "association_id": "eipassoc-059d46b205b17d1f6",
            "connectivity_type": "public",
            "id": "nat-09d8db09dd1664144",
            "network_interface_id": "eni-04c3fc6aefc96cb29",
            "private_ip": "172.17.2.225",
            "public_ip": "3.109.196.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017fa88ed68cd8034",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-ngw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-ngw"
            }
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b8cfbe744ea1c60",
            "association_id": "eipassoc-06b4a5f538c4cc742",
            "connectivity_type": "public",
            "id": "nat-09f3302e0128ea6ec",
            "network_interface_id": "eni-0a2a33d5ec3272101",
            "private_ip": "172.17.3.141",
            "public_ip": "52.66.19.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06d92f7ffc1c455bd",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-ngw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-ngw"
            }
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05bd5889c7928eb8e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09d8db09dd1664144",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05bd5889c7928eb8e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-074d6a510b80744261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09f3302e0128ea6ec",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-074d6a510b8074426",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02b10fe681ffd6f16",
            "id": "r-rtb-0611e29c34462bfac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0611e29c34462bfac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.ep-backend"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02b10fe681ffd6f16",
            "id": "r-rtb-0611e29c34462bfac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0611e29c34462bfac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.ep-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:route-table/rtb-05bd5889c7928eb8e",
            "id": "rtb-05bd5889c7928eb8e",
            "owner_id": "047976664704",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-rt-pivate"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-rt-pivate"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ep-backend"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:route-table/rtb-074d6a510b8074426",
            "id": "rtb-074d6a510b8074426",
            "owner_id": "047976664704",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-rt-pivate"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-rt-pivate"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ep-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:route-table/rtb-0611e29c34462bfac",
            "id": "rtb-0611e29c34462bfac",
            "owner_id": "047976664704",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-rt-public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ep-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04faf892b7a61d532",
            "route_table_id": "rtb-05bd5889c7928eb8e",
            "subnet_id": "subnet-0ef93116b664c9f93"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091c6f6b909047739",
            "route_table_id": "rtb-074d6a510b8074426",
            "subnet_id": "subnet-070924f7c5409c617"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05da8f527e268a221",
            "route_table_id": "rtb-0611e29c34462bfac",
            "subnet_id": "subnet-017fa88ed68cd8034"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cecfe507d7702082",
            "route_table_id": "rtb-0611e29c34462bfac",
            "subnet_id": "subnet-06d92f7ffc1c455bd"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecomm_pulse_redis_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:security-group/sg-046e9b70cce7e742a",
            "description": "Redis Server Security Group (terraform-managed)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046e9b70cce7e742a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.17.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "ep-backend-prod-redis-ec2-sg",
            "name_prefix": "",
            "owner_id": "047976664704",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ep-backend"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:security-group/sg-044ee117ae8c0ac26",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044ee117ae8c0ac26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ep-backend-prod-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "047976664704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-sg-ecs-tasks"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-sg-ecs-tasks"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ep-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ep-backend-db-access-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:security-group/sg-0c990ca84ba7c6e52",
            "description": "Allow access to RDS",
            "egress": [],
            "id": "sg-0c990ca84ba7c6e52",
            "ingress": [],
            "name": "ep-backend-prod-db-access-sg",
            "name_prefix": "",
            "owner_id": "047976664704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-sg-db-access"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-sg-db-access"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ep-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ep-backend-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:security-group/sg-0c0b1de2824e92e83",
            "description": "ep-backend-prod Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0b1de2824e92e83",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.17.0.0/24",
                  "172.17.1.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c990ca84ba7c6e52"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ep-backend-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "047976664704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-sg-rds"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-sg-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ep-backend-db-access-sg",
            "aws_subnet.private",
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:security-group/sg-00df363c91e5ff8e2",
            "description": "Allow HTTP from Anywhere into ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00df363c91e5ff8e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ep-backend-prod-lb-sg",
            "name_prefix": "",
            "owner_id": "047976664704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-lb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ep-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:subnet/subnet-0ef93116b664c9f93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef93116b664c9f93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047976664704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-private-sub"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-private-sub"
            },
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "dependencies": [
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:subnet/subnet-070924f7c5409c617",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070924f7c5409c617",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047976664704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-private-sub"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-private-sub"
            },
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "dependencies": [
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:subnet/subnet-017fa88ed68cd8034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017fa88ed68cd8034",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047976664704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-public-sub"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-public-sub"
            },
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "dependencies": [
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:subnet/subnet-06d92f7ffc1c455bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d92f7ffc1c455bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047976664704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-public-sub"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-public-sub"
            },
            "vpc_id": "vpc-00a6b2300febc068d"
          },
          "dependencies": [
            "aws_vpc.ep-backend",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ep-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047976664704:vpc/vpc-00a6b2300febc068d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-096a9d1f24177e7c4",
            "default_route_table_id": "rtb-041d6b1b537eb4d78",
            "default_security_group_id": "sg-0199a0fa1d5b031c8",
            "dhcp_options_id": "dopt-014f406cbe27ebe91",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a6b2300febc068d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041d6b1b537eb4d78",
            "owner_id": "047976664704",
            "tags": {
              "Environment": "prod",
              "Name": "ep-backend-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ep-backend-prod-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}